2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Support Apple FAT binaries on non-Apple platforms.

	* include/grub/macho.h (GRUB_MACHO_FAT_EFI_MAGIC): New define.
	* include/grub/i386/macho.h (GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT):
	Likewise.
	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Parse
	Apple FAT binaries.

2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/disk.c (grub_disk_write): Fix sector number on 4K
	sector devices.

2013-01-07  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/io/bufio.c (grub_bufio_open): Use grub_zalloc instead of
	explicitly zeroing elements.
	* grub-core/io/gzio.c (grub_gzio_open): Likewise.
	* grub-core/io/lzopio.c (grub_lzopio_open): Remove explicit zeroing
	of elements in a structure already allocated using grub_zalloc.
	* grub-core/io/xzio.c (grub_xzio_open): Likewise.

2013-01-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (grub_cpu): New subsection.
	(grub_platform): Likewise.

2013-01-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/minix.c (grub_minix_read_file): Simplify arithmetics.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_read_block): Use shifts rather than
	divisions.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c: Eliminate useless divisions in favor of shifts.
	* grub-core/fs/ntfscomp.c: Likewise.
	* include/grub/ntfs.h (grub_ntfs_data): Replace spc with log_spc.
	(grub_ntfs_comp): Likewise.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (-grub_nilfs2_palloc_groups_per_desc_block):
	Rename to ...
	(grub_nilfs2_palloc_log_groups_per_desc_block): ... this. Return log
	of groups_per_block. All users updated.

2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_write): Call
	grub_error properly.
	* grub-core/disk/ieee1275/nand.c (grub_nand_write): Likewise.